Dependencies/eth32_files_2.04/examples/buttons/c/eth32.h

// A few Windows types in order to keep our
// data structures consistent
typedef void *HWND;

typedef unsigned int WPARAM;

typedef long LPARAM;
// Data type for handle to the ETH32 device
typedef void *eth32;


// Format for callback function used with events
typedef void (CALLCONVENTION *eth32_eventfn)(eth32 handle, eth32_event *event, void *extra);


// Event handler information
typedef struct
{
	int type; /* which method to use for event notification */
	          /* HANDLER_NONE     - none; disabled.
	           * HANDLER_CALLBACK - callback function
	           * HANDLER_MESSAGE  - Windows message notification: 
	           *     A windows message with the given message ID is sent 
	           *     to the specified window
	           *     whenever a new event fires.  This is intended to be 
	           *     used with the event queue such that when the windows
	           *     message is received, you attempt to dequeue any events
	           *     that are in the message queue.
	           */
	/* The following are only used with type HANDLER_CALLBACK */
	int maxqueue; // Maximum number of events that can be queued waiting for 
	               // the callback to finish
	int fullqueue; // What to do if queue ever gets full.  Specify one of the
	               // QUEUE_... constants
	eth32_eventfn eventfn; // Address of user-defined callback function.
	void *extra;  // Extra user-defined value to be passed to the callback
	              // whenever it is called.

	/* The following are only used with type HANDLER_MESSAGE: */
	HWND window; // Window handle to send messages to.
	unsigned int msgid; // Windows message to be sent to window.
	WPARAM wparam; // wparam to be included with any messages that are sent
	LPARAM lparam; // lparam to be included with any messages that are sent
	
} eth32_handler;

int CALLCONVENTION CALLEXTRA eth32_get_event_handler(eth32 handle, eth32_handler *handler);


int CALLCONVENTION CALLEXTRA eth32_set_counter_state(eth32 handle, int counter, int state);

int CALLCONVENTION CALLEXTRA eth32_get_counter_state(eth32 handle, int counter, int *state);

int CALLCONVENTION CALLEXTRA eth32_set_counter_value(eth32 handle, int counter, int value);

int CALLCONVENTION CALLEXTRA eth32_get_counter_value(eth32 handle, int counter, int *value);

int CALLCONVENTION CALLEXTRA eth32_set_counter_rollover(eth32 handle, int counter, int rollover);

int CALLCONVENTION CALLEXTRA eth32_get_counter_rollover(eth32 handle, int counter, int *rollover);

int CALLCONVENTION CALLEXTRA eth32_set_counter_threshold(eth32 handle, int counter, int threshold);

int CALLCONVENTION CALLEXTRA eth32_get_counter_threshold(eth32 handle, int counter, int *threshold);


int CALLCONVENTION CALLEXTRA eth32_set_pwm_clock_state(eth32 handle, int state);

int CALLCONVENTION CALLEXTRA eth32_get_pwm_clock_state(eth32 handle, int *state);

int CALLCONVENTION CALLEXTRA eth32_set_pwm_base_period(eth32 handle, int period);

int CALLCONVENTION CALLEXTRA eth32_get_pwm_base_period(eth32 handle, int *period);

int CALLCONVENTION CALLEXTRA eth32_set_pwm_channel(eth32 handle, int channel, int state);

int CALLCONVENTION CALLEXTRA eth32_get_pwm_channel(eth32 handle, int channel, int *state);

int CALLCONVENTION CALLEXTRA eth32_set_pwm_duty_period(eth32 handle, int channel, int period);

int CALLCONVENTION CALLEXTRA eth32_get_pwm_duty_period(eth32 handle, int channel, int *period);


int CALLCONVENTION CALLEXTRA eth32_set_pwm_parameters(eth32 handle, int channel, int state, float freq, float duty);

int CALLCONVENTION CALLEXTRA eth32_get_pwm_parameters(eth32 handle, int channel, int *state, float *freq, float *duty);


int CALLCONVENTION CALLEXTRA eth32_get_eeprom(eth32 handle, int address, int length, void *buffer);

int CALLCONVENTION CALLEXTRA eth32_set_eeprom(eth32 handle, int address, int length, void *buffer);


const char * CALLCONVENTION CALLEXTRA eth32_error_string(int errorcode);


int CALLCONVENTION CALLEXTRA eth32_close(eth32 handle);

typedef void *eth32cfg; // Data type for handle to ETH32 config data information
typedef void *eth32cfgiflist; // Data type for handle to network interface list


// Some languages always align their structures on 4-byte boundaries,
// so this structure includes that.
typedef struct
{
	unsigned char product_id;
	unsigned char firmware_major;
	unsigned char firmware_minor;
	unsigned char config_enable;
	unsigned char mac[8]; // 8 to make alignment right, only need 6 though
	unsigned short serialnum_batch;
	unsigned short serialnum_unit; 
	eth32cfg_ip_t config_ip;
	eth32cfg_ip_t config_gateway;
	eth32cfg_ip_t config_netmask;
	eth32cfg_ip_t active_ip;
	eth32cfg_ip_t active_gateway;
	eth32cfg_ip_t active_netmask;
	unsigned char dhcp;

} eth32cfg_data_t;


int CALLCONVENTION CALLEXTRA eth32cfg_ip_to_string(const eth32cfg_ip_t *ipbinary, char *ipstring); // ipstring buffer MUST be at least 16 bytes long
int CALLCONVENTION CALLEXTRA eth32cfg_string_to_ip(const char *ipstring, eth32cfg_ip_t *ipbinary);


eth32cfg CALLCONVENTION CALLEXTRA eth32cfg_query(eth32cfg_ip_t *bcastaddr, int *number, int *result);

eth32cfg CALLCONVENTION CALLEXTRA eth32cfg_discover_ip(eth32cfg_ip_t *bcastaddr, unsigned int flags, unsigned char *mac, unsigned char product_id, unsigned short serialnum_batch, unsigned short serialnum_unit, int *number, int *result);

int CALLCONVENTION CALLEXTRA eth32cfg_get_config(eth32cfg handle, int index, eth32cfg_data_t *dataptr);

int CALLCONVENTION CALLEXTRA eth32cfg_set_config(eth32cfg_ip_t *bcastaddr, eth32cfg_data_t *dataptr);

int CALLCONVENTION CALLEXTRA eth32cfg_serialnum_string(unsigned char product_id, unsigned short batch, unsigned short unit, char *serialstring, int bufsize);

void CALLCONVENTION CALLEXTRA eth32cfg_free(eth32cfg handle);



int CALLCONVENTION CALLEXTRA eth32cfg_plugin_load(int option);

eth32cfgiflist CALLCONVENTION CALLEXTRA eth32cfg_plugin_interface_list(int *numd, int *result);

int CALLCONVENTION CALLEXTRA eth32cfg_plugin_interface_address(eth32cfgiflist handle, int index, eth32cfg_ip_t *ip, eth32cfg_ip_t *netmask);

int CALLCONVENTION CALLEXTRA eth32cfg_plugin_interface_type(eth32cfgiflist handle, int index, int *type);

int CALLCONVENTION CALLEXTRA eth32cfg_plugin_interface_name(eth32cfgiflist handle, int index, int nametype, char *name, int *length);

int CALLCONVENTION CALLEXTRA eth32cfg_plugin_choose_interface(eth32cfgiflist handle, int index);

void CALLCONVENTION CALLEXTRA eth32cfg_plugin_interface_list_free(eth32cfgiflist handle);