Dependencies/eth32_files_2.04/api/windows/ms.net/source/import.cs

		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_get_event_handler(IntPtr handle, out eth32_handler handler);

		
		
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_set_counter_state(IntPtr handle, int counter, int state);

		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_get_counter_state(IntPtr handle, int counter, out int state);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_set_counter_value(IntPtr handle, int counter, int value);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_get_counter_value(IntPtr handle, int counter, out int value);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_set_counter_rollover(IntPtr handle, int counter, int rollover);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_get_counter_rollover(IntPtr handle, int counter, out int rollover);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_set_counter_threshold(IntPtr handle, int counter, int threshold);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_get_counter_threshold(IntPtr handle, int counter, out int threshold);

		
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_set_pwm_clock_state(IntPtr handle, int state);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_get_pwm_clock_state(IntPtr handle, out int state);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_set_pwm_base_period(IntPtr handle, int period);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_get_pwm_base_period(IntPtr handle, out int period);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_set_pwm_channel(IntPtr handle, int channel, int state);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_get_pwm_channel(IntPtr handle, int channel, out int state);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_set_pwm_duty_period(IntPtr handle, int channel, int period);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_get_pwm_duty_period(IntPtr handle, int channel, out int period);


		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_set_pwm_parameters(IntPtr handle, int channel, int state, float freq, float duty);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_get_pwm_parameters(IntPtr handle, int channel, out int state, out float freq, out float duty);

        [DllImport("eth32api.dll", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
        public static extern int eth32_get_eeprom(IntPtr handle, int address, int length, [In, Out] byte[] buffer);

        [DllImport("eth32api.dll", CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
        public static extern int eth32_set_eeprom(IntPtr handle, int address, int length, [In] byte[] buffer);
		
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern IntPtr eth32_error_string(int errorcode);

		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
		public static extern int eth32_close(IntPtr handle);


        // Configuration functions
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern int eth32cfg_ip_to_string(ref eth32cfg_ip ipbinary, [In, Out, MarshalAs(UnmanagedType.LPStr)] StringBuilder ipstring); // ipstring buffer MUST be at least 16 bytes long
		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern int eth32cfg_string_to_ip([MarshalAs(UnmanagedType.LPStr)] string ipstring, out eth32cfg_ip ipbinary);

		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern IntPtr eth32cfg_query(ref eth32cfg_ip bcastaddr, out int number, out int result);

		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern IntPtr eth32cfg_discover_ip(ref eth32cfg_ip bcastaddr, uint flags, ref eth32cfg_mac mac, byte product_id, ushort serialnum_batch, ushort serialnum_unit, out int number, out int result);

		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern int eth32cfg_get_config(IntPtr handle, int index, out eth32cfg_data config_data);
		
        [DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern int eth32cfg_set_config(ref eth32cfg_ip bcastaddr, ref eth32cfg_data config_data);
		
        [DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern int eth32cfg_serialnum_string(byte product_id, ushort batch, ushort unit, [In, Out, MarshalAs(UnmanagedType.LPStr)] StringBuilder serialstring, int bufsize);
		
        [DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern void eth32cfg_free(IntPtr handle);


		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern int eth32cfg_plugin_load(int option);

		[DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern IntPtr eth32cfg_plugin_interface_list(out int numd, out int result);
		
        [DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern int eth32cfg_plugin_interface_address(IntPtr handle, int index, out eth32cfg_ip ip, out eth32cfg_ip netmask);
		
        [DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern int eth32cfg_plugin_interface_type(IntPtr handle, int index, out int type);
		
        [DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern int eth32cfg_plugin_interface_name(IntPtr handle, int index, int nametype, [In, Out, MarshalAs(UnmanagedType.LPStr)] StringBuilder name, ref int length);
		
        [DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern int eth32cfg_plugin_choose_interface(IntPtr handle, int index);
		
        [DllImport("eth32api.dll", CallingConvention=CallingConvention.StdCall, CharSet=CharSet.Ansi)]
        public static extern void eth32cfg_plugin_interface_list_free(IntPtr handle);

	}
}
